[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/Eisbrenner/wemake-python-package/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "water-masses"
version = "2021.1a1"
description = "On the origin of water masses in the northern European shelf seas from a Lagrangian perspective"
license = "GPL3"

authors = []

readme = "README.md"

repository = "https://github.com/shelf-sea/water-masses"

keywords = []

# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]


[tool.poetry.dependencies]
python = "^3.8"
#
cftime = "~1.2.1"
nc-time-axis = "^1.2.0"
netcdf4 = "1.5.4"
#
numpy = "^1.19.2"
scipy = "~1.5.4"
statsmodels = "^0.12.0"
pandas = "^1.1.3"
xarray = "^0.16.1"
cf-xarray = "^0.5.1"
#
matplotlib = "^3.3.2"
cmocean = "^2.0"
#
intake = "^0.6.0"
intake-xarray = "^0.4.0"
dask = "^2020.12.0"
h5netcdf = "^0.10.0"


[tool.poetry.dev-dependencies]
# pre-commit dependencies are hard coded in .pre-commit-config.yaml
pre-commit = "^2.6.0"
mypy = "0.790"
black = "20.8b1"
isort = "5.6.4"

# checks, formatting and linting
# needs release > 0.14.1 of wemake-python-styleguide because of flake8-isort's support of isort >= 4.0
# wemake-python-styleguide = "^0.14.2"
wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide.git", rev = "dffa5cb" }
flake8-pytest-style = "^1.3"
flake8-isort = "^4.0"
nitpick = "^0.22"

safety = "^1.9"

# testing
pytest = "^5.4"
pytest-cov = "^2.10"
pytest-randomly = "^3.4"
pytest-sugar = "^0.9.3"

# docs
sphinx = "^2.2"
sphinx-autodoc-typehints = "^1.10"
doc8 = "^0.8"
m2r = "^0.2"
tomlkit = "^0.7"

# convinience
bpython = "^0.19"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
